# nuviz

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  main.rs
cli/src/commands/: breakdown.rs  cleanup.rs  compare.rs  diff.rs  export.rs  image.rs  leaderboard.rs  ls.rs  matrix.rs  mod.rs  reproduce.rs  tag.rs  view.rs  watch.rs
cli/src/data/: aggregation.rs  experiment.rs  images.rs  meta.rs  metrics.rs  mod.rs  ply.rs  scenes.rs
cli/src/terminal/: capability.rs  heatmap.rs  mod.rs  render.rs
cli/src/tui/: app.rs  chart.rs  mod.rs  widgets.rs
cli/src/watcher/: file_watcher.rs  mod.rs  tail.rs
cli/tests/: hardening_test.rs  integration_test.rs
docs/: USAGE.md  nuviz_design.md
examples/: demo_phase2.py  demo_phase3.py  demo_phase4.py  demo_train.py
python/: README.md  pyproject.toml
python/src/nuviz/: __init__.py  ablation.py  anomaly.py  config.py  gpu.py  image.py  logger.py  naming.py  pointcloud.py  scene_writer.py  snapshot.py  types.py  writer.py
python/tests/: conftest.py  test_ablation.py  test_anomaly.py  test_gpu.py  test_hardening.py  test_image.py  test_integration.py  test_logger.py  test_naming.py  test_nan_serialization.py  test_pointcloud.py  test_rotation.py  test_scene.py  test_snapshot.py  test_writer.py
