[package]
name = "nuviz-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nuviz"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
comfy-table = "7"

[dev-dependencies]
tempfile = "3"
