[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nuviz"
version = "0.3.0"
description = "Terminal-native ML training visualization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Zhongyuan" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/LordKnows/nuviz"
Repository = "https://github.com/LordKnows/nuviz"
Issues = "https://github.com/LordKnows/nuviz/issues"
Documentation = "https://github.com/LordKnows/nuviz/blob/main/docs/USAGE.md"

[project.optional-dependencies]
images = ["Pillow>=9.0"]
yaml = ["PyYAML>=6.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "numpy>=1.24",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nuviz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.coverage.run]
source = ["nuviz"]

[tool.coverage.report]
fail_under = 80
show_missing = true
